added testcases for service